@startuml

abstract class org.rudi.common.storage.entity.AbstractLabelizedEntity <<MappedSuperclass>>  {
	{field} {static} +CODE_COLUMN_LENGTH : int
	{field} {static} +CODE_COLUMN_NAME : String
	{field} +@Column("code") code : String
	{field} +@Column("label") label : String
	{field} {static} -serialVersionUID : long
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class org.rudi.common.storage.entity.AbstractLongIdEntity <<MappedSuperclass>>  {
	{field} +@Column("id") @Id id : Long
	{field} {static} -serialVersionUID : long
	{field} +@Column("uuid") uuid : java.util.UUID
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder {
	{field} -id : Long
	{field} -uuid : java.util.UUID
	{method}  {abstract} +build () : org.rudi.common.storage.entity.AbstractLongIdEntity
	{method} +id ( id : Long ) : org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder
	{method}  {abstract} #self () : org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder
	{method} +toString () : String
	{method} +uuid ( uuid : java.util.UUID ) : org.rudi.common.storage.entity.AbstractLongIdEntity$AbstractLongIdEntityBuilder
}


abstract class org.rudi.common.storage.entity.AbstractStampedEntity <<MappedSuperclass>>  {
	{field} +@Column("closing_date") closingDate : java.time.LocalDateTime
	{field} +@Column("opening_date") openingDate : java.time.LocalDateTime
	{field} +@Column("order_") order : int
	{field} {static} -serialVersionUID : long
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class org.rudi.common.storage.entity.AbstractTranslationEntity <<MappedSuperclass>>  {
	{field} +@Column("lang") lang : String
	{field} {static} -serialVersionUID : long
	{field} +@Column("text") text : String
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class org.rudi.common.storage.entity.HibernateEntityHelper {
	{method}  {static} +setCollection ( collectionGetter : java.util.function.Supplier , newCollection : java.util.Collection ) : void
}


interface org.rudi.common.storage.entity.PositionedStatus {
	{method}  {abstract} +isFinal () : boolean
	{method}  {abstract} +isInitial () : boolean
}


class org.rudi.common.storage.entity.SkosConceptCodeColumn {
	{field} {static} +LENGTH : int
	{field} {static} +NAME : String
	{field} {static} +TABLE_NAME : String
}


enum org.rudi.common.storage.entity.StatusPosition {
	{field} +FINAL
	{field} +INITIAL
	{field} +INTERMEDIATE
}


class org.rudi.microservice.apigateway.storage.entity.api.ApiEntity <<Entity>>  <<Table>>  {
 {TableName=api}
 {TableSchema=apigateway_data}
--
	{field} +@Column("contract") contract : String
	{field} +@Column("creation_date") creationDate : java.time.LocalDateTime
	{field} +@Column("global_id") globalId : java.util.UUID
	{field} +@Column("media_id") mediaId : java.util.UUID
	{field} +@Column("node_provider_id") nodeProviderId : java.util.UUID
	{field} +@Column("producer_id") producerId : java.util.UUID
	{field} +@Column("provider_id") providerId : java.util.UUID
	{field} {static} -serialVersionUID : long
	{field} +@Column("updated_date") updatedDate : java.time.LocalDateTime
	{field} +@Column("url") url : String
	{method} +addParameter ( apiParameter : org.rudi.microservice.apigateway.storage.entity.api.ApiParameterEntity ) : void
	{method} +addThrottling ( throttling : org.rudi.microservice.apigateway.storage.entity.throttling.ThrottlingEntity ) : void
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +lookupParameterByName ( apiParameterName : String ) : org.rudi.microservice.apigateway.storage.entity.api.ApiParameterEntity
	{method} +lookupParameterByUuid ( apiParameterUuid : java.util.UUID ) : org.rudi.microservice.apigateway.storage.entity.api.ApiParameterEntity
	{method} +lookupThrottlingByUuid ( throttlingUuid : java.util.UUID ) : org.rudi.microservice.apigateway.storage.entity.throttling.ThrottlingEntity
	{method} +toString () : String
}


enum org.rudi.microservice.apigateway.storage.entity.api.ApiMethod {
	{field} +DELETE
	{field} +GET
	{field} +HEAD
	{field} +OPTIONS
	{field} +PATCH
	{field} +POST
	{field} +PUT
	{field} +TRACE
}


class org.rudi.microservice.apigateway.storage.entity.api.ApiParameterEntity <<Entity>>  <<Table>>  {
 {TableName=apiparameter}
 {TableSchema=apigateway_data}
--
	{field} +@Column("name") name : String
	{field} {static} -serialVersionUID : long
	{field} +@Column("value_") value : String
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class org.rudi.microservice.apigateway.storage.entity.throttling.ThrottlingEntity <<Entity>>  <<Table>>  {
 {TableName=throttling}
 {TableSchema=apigateway_data}
--
	{field} +burstCapacity : int
	{field} +rate : int
	{field} {static} -serialVersionUID : long
	{method} +equals ( obj : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}




org.rudi.common.storage.entity.AbstractLabelizedEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.common.storage.entity.AbstractStampedEntity --|>  org.rudi.common.storage.entity.AbstractLabelizedEntity
org.rudi.common.storage.entity.AbstractTranslationEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.microservice.apigateway.storage.entity.api.ApiEntity "1" o-- "0..*"  org.rudi.microservice.apigateway.storage.entity.api.ApiMethod : methods
org.rudi.microservice.apigateway.storage.entity.api.ApiEntity "1" o-- "0..*"  org.rudi.microservice.apigateway.storage.entity.api.ApiParameterEntity :  @OneToMany\nparameters
org.rudi.microservice.apigateway.storage.entity.api.ApiEntity "1" o-- "0..*"  org.rudi.microservice.apigateway.storage.entity.throttling.ThrottlingEntity :  @ManyToMany\nthrottlings
org.rudi.microservice.apigateway.storage.entity.api.ApiEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.microservice.apigateway.storage.entity.api.ApiParameterEntity --|>  org.rudi.common.storage.entity.AbstractLongIdEntity
org.rudi.microservice.apigateway.storage.entity.throttling.ThrottlingEntity --|>  org.rudi.common.storage.entity.AbstractStampedEntity

hide methods

@enduml